maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:32: error: ':' expected but ')' found.
def isDirectionFree(dir){
                       ^PledgeMaze:54: error: identifier expected but '}' found.
}
^